# rtx-notifier

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  example_config.json  setup.sql
.cargo/: config
src/: config.rs  error.rs  mail.rs  main.rs  product.rs  provider.rs
src/notifier/: discord.rs  mod.rs  twilio.rs
src/product/: mod.rs
src/scraping/: amazon.rs  bestbuy.rs  bnh.rs  evga.rs  mod.rs  newegg.rs  nvidia.rs
