[package]
name = "evga-notifier"
version = "0.1.0"
authors = ["Logan Saso <logansaso+tech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imap = "2.3.0"
native-tls = "0.2.4"
twilio = "1.0.0"
tokio = { version = "0.2", features = ["full"] }
chrono = { version = "0.4.15", features = ["serde"] }
serde = "1.0.116"
serde_json = "1.0.57"
reqwest = { version = "0.10", features = ["blocking", "json"] }
scraper = "0.12.0"
select = "0.5.0"
regex = "1.3.9"
lazy_static = "1.4.0"
futures = "0.3.5"
async-trait = "0.1.40"